2002-12-02  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* configure.ac: export xml includes in gsweb.make
	* gsweb.make.in (AUXILIARY_INCLUDE_DIRS): added.
	* Makefile.postamble: moved gsweb.make in Auxiliary/ make dir.

	* GSWeb.framework/GSWTemplateParser.m ([GSWTemplateParser
	-definitions]): compilable with gcc < 3
	* GSWeb.framework/GSWHyperlink.m ([GSWHyperlink
	-computeQueryDictionaryInContext:]): likewise.

2002-11-27   Manuel Guesdon <mguesdon@orange-concept.com>

	* GSWeb/GSWApplication.m:
		o added \n in logs
		o added removeVolatileDomainForName: before setting it
		o remove rcsId
		o changed class creation to avoid libFoundationExt dependency
		o reduced compilation  warnings
	* GSWeb/GSWDisplayGroup.m:
		o fixed bug in -initWithKeyValueUnarchiver: for defaultStringMatchFormat
		o remove rcsId
	* GSWeb/GSWConditional.[hm]
		o added _value and _conditionValue (see doc)
		o documentation
		o remove rcsId
	* GSWeb/GSWConstants.[hm]
		o added conditionValue
	* config.mak
		o switched to gdl2	
	* GSWeb/GSWDeployedBundle.h:
		o changed bundleWithPath: return path to avoid warning
	* GSWeb/GSWSessionStore.[hm]:
		o added containsSessionID: and allSessionIDs;
		o implemented +serverSessionStore
		o remove rcsId
	* GSWeb/GSWComponentDefinition.m:
		o logs
		o remove rcsId	
	
2002-11-23   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWExtensions.framework/GSWLongResponsePage.h:
		o fixed WO* to GSW*

2002-11-18   Manuel Guesdon <mguesdon@orange-concept.com>
	I've rewritten AutoValue handling in GSWBrowser,GSWCheckBoxList, 
		GSWRadioButtonList, GSWPopUpButton to make it coherent 
		and working like specifications.	
	
	* GSWeb/GSWSwitchComponent.m:
		o add more information when componentName is null 
	* GSWRepetition.h/.m:
		o added startIndex, stopIndex
	* GSWeb/GSWConstants.h/.m:
		o added startIndex__Key,stopIndex__Key
	* GSWeb/GSWComponent.h/.m:
		o replace _isSynchronized by _isParentToComponentSynchronized and 
			_isComponentToParentSynchronized;